refactor: Preference/Vote 도메인 DTO 패턴 통일 (#30)
- Preference 도메인: DTO suffix 추가 및 Builder 패턴 적용
  - CreatePreferenceRequest → CreatePreferenceRequestDTO
  - UpdatePreferenceRequest → UpdatePreferenceRequestDTO
  - PreferenceDetailResponse → PreferenceDetailResponseDTO
  - PreferenceListResponse → PreferenceListResponseDTO

- Vote 도메인: record → class 변경 및 Builder 패턴 적용
  - VoteCreateRequestDTO, VoteUpdateRequestDTO, VoteResponseDTO 등 8개
  - nested DTO도 Builder 패턴 적용

- Service 레이어: getter 메서드명 수정 (record → class 변환)
  - title() → getTitle(), voteId() → getVoteId() 등